# nyxfinance

./: .env.example  .gitignore  .mcp.json  README.md  audit-findings.md  blend-reflector-integration.md  file-strcuture.md  integration-checklist.md  links.md  plan.md  pre-mainnet-readiness.md  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/tests/: demo-state.test.ts  sep-routes.test.ts
confidential-prefunding/: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
confidential-prefunding/docs/: institutional-demo-dashboard-spec.md  (+2 more)
confidential-prefunding/oz-confidential/contracts/collateral-sufficiency-verifier/: Cargo.toml
confidential-prefunding/oz-confidential/contracts/collateral-sufficiency-verifier/src/: lib.rs
confidential-prefunding/oz-confidential/contracts/confidential-token/: Cargo.toml
confidential-prefunding/oz-confidential/contracts/confidential-token/src/: lib.rs
confidential-prefunding/oz-confidential/contracts/confidential-verifier/: Cargo.toml
confidential-prefunding/oz-confidential/contracts/confidential-verifier/src/: lib.rs
confidential-prefunding/oz-confidential/contracts/disclosure-grant-registry/: Cargo.toml
confidential-prefunding/oz-confidential/contracts/disclosure-grant-registry/src/: lib.rs
confidential-prefunding/oz-confidential/runner/: Cargo.toml
confidential-prefunding/oz-confidential/runner/src/: main.rs
docs/: nyx-architecture-16x9.md  vercel-frontend-deploy.md
frontend/: .env.example  next.config.ts
oz-confidential/: Cargo.toml
oz-confidential/circuits/collateral_sufficiency/src/: main.nr  tests.nr
oz-confidential/circuits/repayment_history/src/: main.nr  tests.nr
oz-confidential/contracts/account-policy/: Cargo.toml
oz-confidential/contracts/account-policy/src/: lib.rs
oz-confidential/contracts/blend-facility/: Cargo.toml
oz-confidential/contracts/blend-facility/src/: lib.rs
oz-confidential/contracts/collateral-lock-registry/: Cargo.toml
oz-confidential/contracts/collateral-lock-registry/src/: lib.rs
oz-confidential/contracts/collateral-policy-registry/: Cargo.toml
oz-confidential/contracts/collateral-policy-registry/src/: lib.rs
oz-confidential/contracts/collateral-sufficiency-verifier/: Cargo.toml
oz-confidential/contracts/collateral-sufficiency-verifier/src/: lib.rs
oz-confidential/contracts/confidential-auditor/: Cargo.toml
oz-confidential/contracts/confidential-auditor/src/: lib.rs
oz-confidential/contracts/confidential-token/: Cargo.toml
oz-confidential/contracts/confidential-token/src/: lib.rs
oz-confidential/contracts/confidential-verifier/: Cargo.toml
oz-confidential/contracts/confidential-verifier/src/: lib.rs
oz-confidential/contracts/disclosure-grant-registry/: Cargo.toml
oz-confidential/contracts/disclosure-grant-registry/src/: lib.rs
oz-confidential/contracts/oracle-adapter/: Cargo.toml
oz-confidential/contracts/oracle-adapter/src/: lib.rs
oz-confidential/contracts/participant-policy/: Cargo.toml
oz-confidential/contracts/participant-policy/src/: lib.rs
oz-confidential/contracts/prefunding-credit-line/: Cargo.toml
oz-confidential/contracts/prefunding-credit-line/src/: lib.rs  test.rs
oz-confidential/contracts/prefunding-credit-line/test_snapshots/test/: execute_draw_rejects_mismatched_commitment.1.json  execute_draw_reverts_if_transfer_fails.1.json  liquidate_after_due_ledger_seizes_and_blocks_repay.1.json  liquidate_before_due_ledger_fails.1.json  open_credit_rejects_failing_proof.1.json  open_draw_repay_happy_path.1.json  paused_blocks_open_credit.1.json  repay_reverts_if_transfer_fails_and_keeps_collateral_frozen.1.json  reusing_active_lock_key_fails.1.json
oz-confidential/contracts/repayment-history-registry/: Cargo.toml
oz-confidential/contracts/repayment-history-registry/src/: lib.rs
oz-confidential/contracts/repayment-history-verifier/: Cargo.toml
oz-confidential/contracts/repayment-history-verifier/src/: lib.rs
oz-confidential/contracts/timelock-controller/: Cargo.toml
oz-confidential/contracts/timelock-controller/src/: lib.rs
oz-confidential/runner/src/: main.rs
oz-confidential/state/: phase4-oz_local-report.json  phase4-testnet-report.json  proof-of-life-report.json
oz-confidential/state/stellar-config/identity/: admin.toml  alpha.toml  auditor.toml  beta.toml  credit-executor.toml  facility.toml  rejected.toml
oz-confidential/state/stellar-config/network/: mainnet.toml
oz-confidential/state/wasm/: nyx_account_policy.wasm  nyx_blend_facility.wasm  nyx_collateral_lock_registry.wasm  nyx_collateral_policy_registry.wasm  nyx_collateral_sufficiency_verifier.wasm  nyx_confidential_auditor.wasm  nyx_confidential_token.wasm  nyx_confidential_verifier.wasm  nyx_demo_fungible_token.wasm  nyx_disclosure_grant_registry.wasm  nyx_oracle_adapter.wasm  nyx_participant_policy.wasm  nyx_prefunding_credit_line.wasm  nyx_repayment_history_registry.wasm  nyx_repayment_history_verifier.wasm  nyx_timelock_controller.wasm
scripts/: call-contract.mjs  deploy-construct.mjs  deploy-sac.mjs  deploy-upload.mjs  e2e-phase6.ts  set-compliance-none.mjs  set-compliance-policy.mjs  sim-cost.mjs
(+212 files in other folders)
