[package]
name = "nyx-collateral-sufficiency-verifier"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
stellar-access = { workspace = true }
stellar-contract-utils = { workspace = true }
stellar-macros = { workspace = true }
ultrahonk_soroban_verifier = { workspace = true }
