[package]
name = "nyx-disclosure-grant-registry"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = { workspace = true }
stellar-macros = { workspace = true }
